feat: sync branding to Rasobhoomi Plantation, update footers, SEO, and delivery charges

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rasobhoomi Plantation</title>
+    <title>Rasobhoomi Plantation | Authentic Plants & Greenery</title>
+    <meta name="description"
+        content="Discover healthy and beautiful plants at Rasobhoomi Plantation. Buy plants online with ease.">
+    <meta name="keywords" content="plants, nursery, Rasobhoomi, plantation, buy plants online">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
 </head>
