--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -128,43 +128,86 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-links">
-            <a href="terms.html" class="footer-link">Terms & Conditions</a>
-            <a href="refund.html" class="footer-link">Refund Policy</a>
-            <a href="return.html" class="footer-link">Return Policy</a>
-            <a href="shipping.html" class="footer-link">Shipping Policy</a>
-            <a href="privacy.html" class="footer-link">Privacy Policy</a>
-            <a href="https://wa.me/918972076182?text=Hi%20Rasobhoomi,%20I%20have%20a%20query%20regarding%20products"
-                target="_blank" class="footer-link">Contact Us</a>
-            <a href="#" class="footer-link">Location by Maps</a>
+        <div class="footer-grid">
+            <!-- Column 1: Brand Info -->
+            <div class="footer-col brand-col">
+                <h2 class="footer-logo">Rasobhoomi</h2>
+                <p class="footer-tagline">
+                    Bringing nature to your doorstep. Authentic plants, sustainably grown for a greener home.
+                </p>
+            </div>
+
+            <!-- Column 2: Quick Links -->
+            <div class="footer-col">
+                <h3 class="footer-heading">Quick Links</h3>
+                <ul class="footer-links-list">
+                    <li><a href="/" class="footer-link-item">Home</a></li>
+                    <li><a href="/categories" class="footer-link-item">Shop Categories</a></li>
+                    <li><a href="/about" class="footer-link-item">About Us</a></li>
+                    <li><a href="/contact" class="footer-link-item">Contact</a></li>
+                </ul>
+            </div>
+
+            <!-- Column 3: Customer Care -->
+            <div class="footer-col">
+                <h3 class="footer-heading">Customer Care</h3>
+                <ul class="footer-links-list">
+                    <li><a href="/track-order" class="footer-link-item">Track Order</a></li>
+                    <li><a href="/refund.html" class="footer-link-item">Refund Policy</a></li>
+                    <li><a href="/terms.html" class="footer-link-item">Terms & Conditions</a></li>
+                    <li><a href="/return.html" class="footer-link-item">Return Policy</a></li>
+                    <li><a href="/shipping.html" class="footer-link-item">Shipping Policy</a></li>
+                    <li><a href="/privacy.html" class="footer-link-item">Privacy Policy</a></li>
+                </ul>
+            </div>
+
+            <!-- Column 4: Stay Connected -->
+            <div class="footer-col">
+                <h3 class="footer-heading">Stay Connected</h3>
+                <div class="social-icons">
+                    <a href="https://wa.me/918972076182?text=Hi" target="_blank" rel="noreferrer" class="social-icon"
+                        title="WhatsApp">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path
+                                d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-icon" title="Instagram">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                            <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
+                            <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-icon" title="Facebook">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
+                            stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                            <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
+                        </svg>
+                    </a>
+                </div>
+                <div class="footer-contact-info">
+                    <p>
+                        <span>📍</span>
+                        <strong>Baikara, NORTH 24 PARAGANAS, WEST BENGAL - 743245</strong>
+                    </p>
+                    <p>
+                        <span>📧</span>
+                        <a href="mailto:rasobhoomiplantation@gmail.com">rasobhoomiplantation@gmail.com</a>
+                    </p>
+                    <p>
+                        <span>📞</span>
+                        <a href="tel:+918972076182">+91 8972076182</a>
+                    </p>
+                </div>
+            </div>
         </div>
-        <div class="social-icons">
-            <a href="#" class="social-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
-                    <path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path>
-                    <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
-                </svg>
-            </a>
-            <a href="#" class="social-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"></path>
-                </svg>
-            </a>
-            <a href="#" class="social-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path
-                        d="M22.54 6.42a2.78 2.78 0 0 0-1.94-2C18.88 4 12 4 12 4s-6.88 0-8.6.46a2.78 2.78 0 0 0-1.94 2A29 29 0 0 0 1 11.75a29 29 0 0 0 .46 5.33A2.78 2.78 0 0 0 3.4 19c1.72.46 8.6.46 8.6.46s6.88 0 8.6-.46a2.78 2.78 0 0 0 1.94-2 29 29 0 0 0 .46-5.25 29 29 0 0 0-.46-5.33z">
-                    </path>
-                    <polygon points="9.75 15.02 15.5 11.75 9.75 8.48 9.75 15.02"></polygon>
-                </svg>
-            </a>
-        </div>
+
         <div class="copyright">
-            Rasobhoomi. All rights reserved.
+            &copy; 2026 Rasobhoomi. All rights reserved.
         </div>
     </footer>
 
