--- a/pages/surat-silk.html
+++ b/pages/surat-silk.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Category - Indrita Fabrics</title>
+    <title>Surat Silk Special - Rasobhoomi Plantation</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
@@ -23,7 +23,7 @@
                 <polyline points="12 19 5 12 12 5"></polyline>
             </svg>
         </a>
-        <div class="nav-logo">Indrita Fabrics</div>
+        <div class="nav-logo">Rasobhoomi</div>
 
         <!-- Search Bar (Hidden by default) -->
         <div class="search-bar-container">
