--- a/pages/admin-login.html
+++ b/pages/admin-login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - Indrita Fabrics</title>
+    <title>Admin Login - Rasobhoomi Plantation</title>
     <style>
         * {
             margin: 0;
