fix: remove .html from links and set footer contact info color to black

--- a/pages/track-order.html
+++ b/pages/track-order.html
@@ -79,11 +79,11 @@
             <a href="/categories" class="menu-item">Categories</a>
             <a href="/about" class="menu-item">About Us</a>
             <a href="/contact" class="menu-item">Contact Us</a>
-            <a href="/terms.html" class="menu-item">Terms & Conditions</a>
-            <a href="/refund.html" class="menu-item">Refund Policy</a>
-            <a href="/return.html" class="menu-item">Return Policy</a>
-            <a href="/shipping.html" class="menu-item">Shipping Policy</a>
-            <a href="/privacy.html" class="menu-item">Privacy Policy</a>
+            <a href="/terms" class="menu-item">Terms & Conditions</a>
+            <a href="/refund" class="menu-item">Refund Policy</a>
+            <a href="/return" class="menu-item">Return Policy</a>
+            <a href="/shipping" class="menu-item">Shipping Policy</a>
+            <a href="/privacy" class="menu-item">Privacy Policy</a>
             <a href="/track-order" class="menu-item">Track Your Order</a>
             <a href="/" class="menu-item">Home</a>
         </div>
@@ -242,11 +242,11 @@
                 <h3 class="footer-heading">Customer Care</h3>
                 <ul class="footer-links-list">
                     <li><a href="/track-order" class="footer-link-item">Track Order</a></li>
-                    <li><a href="/refund.html" class="footer-link-item">Refund Policy</a></li>
-                    <li><a href="/terms.html" class="footer-link-item">Terms & Conditions</a></li>
-                    <li><a href="/return.html" class="footer-link-item">Return Policy</a></li>
-                    <li><a href="/shipping.html" class="footer-link-item">Shipping Policy</a></li>
-                    <li><a href="/privacy.html" class="footer-link-item">Privacy Policy</a></li>
+                    <li><a href="/refund" class="footer-link-item">Refund Policy</a></li>
+                    <li><a href="/terms" class="footer-link-item">Terms & Conditions</a></li>
+                    <li><a href="/return" class="footer-link-item">Return Policy</a></li>
+                    <li><a href="/shipping" class="footer-link-item">Shipping Policy</a></li>
+                    <li><a href="/privacy" class="footer-link-item">Privacy Policy</a></li>
                 </ul>
             </div>
 
