--- a/pages/about.html
+++ b/pages/about.html
@@ -88,7 +88,7 @@
             <a href="/" class="menu-item">Home</a>
         </div>
         <div class="admin-link-container">
-            <a href="admin.html" class="admin-link">
+            <a href="/admin" class="admin-link">
                 Admin Panel
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
