--- a/pages/shipping.html
+++ b/pages/shipping.html
@@ -112,6 +112,7 @@
             </h3>
             <p>Rasobhoomi charges a flat delivery fee of <strong>₹150</strong> on all orders. This fee is added to the
                 total amount during checkout.</p>
+            <p style="margin-top: 1rem; font-weight: bold; color: #B91C1C;">DELIVERY CAN TAKE UPTO 15 DAYS</p>
         </section>
 
         <section style="margin-bottom: 2rem;">
