style: visual rebranding with lush green theme and favicon

--- a/pages/product_details.html
+++ b/pages/product_details.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar">
         <button id="menu-btn" class="nav-icon" onclick="history.back()">
-            <!-- Keep back functionality but maybe use hamburger icon if mockup shows hamburger, but mockup shows arrow usually. Wait, mockup for details page wasn't fully header visible but usually user wants consistency. The user provided image shows HashMap/Menu icon? Actually let's look at the image again. The user provided image HAS A HAMBURGER MENU and 'Indrita Fabrics' logo. So it should match Home exactly. -->
+            <!-- Keep back functionality. The user provided image HAS A HAMBURGER MENU. So it should match Home exactly. -->
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                 stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <line x1="3" y1="12" x2="21" y2="12"></line>
