--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="keywords" content="plants, nursery, Rasobhoomi, plantation, buy plants online">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
+    <meta name="referrer" content="strict-origin-when-cross-origin">
+
 </head>
 
 <body>
