--- a/pages/admin_legacy.html
+++ b/pages/admin_legacy.html
@@ -175,7 +175,7 @@
         }
 
         .edit-btn {
-            background: #2C1B10;
+            background: #1A4D2E;
             color: white;
         }
 
@@ -185,7 +185,7 @@
         }
 
         .view-order-btn {
-            background: #2C1B10;
+            background: #1A4D2E;
             color: white;
         }
 
@@ -201,8 +201,8 @@
         }
 
         .drop-zone.drag-over {
-            border-color: #2C1B10;
-            background: #e0f2fe;
+            border-color: #1A4D2E;
+            background: #dcfce7;
         }
 
         .drop-zone-text {
@@ -215,18 +215,18 @@
 
         /* Admin Navbar Overrides */
         .admin-navbar {
-            background-color: #c1ff72 !important;
-            /* Primary Green */
-            color: #2C1B10 !important;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            background-color: #1A4D2E !important;
+            /* Dark Green */
+            color: #FFFFFF !important;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
         }
 
         .admin-navbar .nav-icon {
-            color: #2C1B10 !important;
+            color: #FFFFFF !important;
         }
 
         .admin-navbar .nav-logo {
-            color: #2C1B10 !important;
+            color: #FFFFFF !important;
         }
 
         .admin-logo {
@@ -243,8 +243,8 @@
 
         .logout-btn {
             background: transparent;
-            border: 1px solid rgba(44, 27, 16, 0.5);
-            color: #2C1B10;
+            border: 1px solid rgba(255, 255, 255, 0.5);
+            color: #FFFFFF;
             padding: 0.25rem 0.75rem;
             border-radius: 4px;
             font-size: 0.7rem;
@@ -255,15 +255,15 @@
         }
 
         .logout-btn:hover {
-            background: rgba(44, 27, 16, 0.1);
-            border-color: #2C1B10;
+            background: rgba(255, 255, 255, 0.15);
+            border-color: #FFFFFF;
         }
 
         /* Filter Dropdown Styles */
         .btn-icon-modern {
             background: white;
-            border: 2px solid #2C1B10;
-            color: #2C1B10;
+            border: 2px solid #1A4D2E;
+            color: #1A4D2E;
             padding: 0.75rem 1rem;
             border-radius: 8px;
             cursor: pointer;
@@ -275,7 +275,7 @@
         }
 
         .btn-icon-modern:hover {
-            background: #2C1B10;
+            background: #1A4D2E;
             color: white;
         }
 
@@ -306,7 +306,7 @@
             font-size: 0.85rem;
             text-transform: uppercase;
             font-weight: 600;
-            color: #2C1B10;
+            color: #1A4D2E;
         }
 
         .dropdown-item:hover {
@@ -314,7 +314,7 @@
         }
 
         .dropdown-item.active {
-            background: #2C1B10;
+            background: #1A4D2E;
             color: white;
         }
 
@@ -389,14 +389,14 @@
             align-items: center;
             padding: 1rem;
             border-bottom: 1px solid #ddd;
-            background: #c1ff72;
-            color: #2C1B10;
+            background: #1A4D2E;
+            color: #FFFFFF;
         }
 
         .sidebar-close {
             background: none;
             border: none;
-            color: #2C1B10;
+            color: #FFFFFF;
             font-size: 1.5rem;
             cursor: pointer;
         }
@@ -541,7 +541,7 @@
                         <div style="display: flex; gap: 0.5rem; justify-content: center; margin-bottom: 0.5rem;">
                             <label for="product-images" class="btn-upload-modern" style="margin:0; flex:1;">+UPLOAD
                                 IMAGES </label><button type="button" id="btn-camera" class="btn-upload-modern"
-                                style="margin:0; flex:1; background: #2C1B10; color: white;">📷
+                                style="margin:0; flex:1; background: #1A4D2E; color: white;">📷
                                 TAKE PHOTO </button>
                         </div>
                         <p class="drop-zone-text">or Drag and Drop Images Here</p>
@@ -579,7 +579,7 @@
                     <!-- Header Info -->
                     <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                         <strong>Order ID:</strong><span id="view-order-id"
-                            style="color: #c1ff72; font-weight: bold;"></span>
+                            style="color: #1A4D2E; font-weight: bold;"></span>
                     </div>
                     <div style="display: flex; justify-content: space-between; margin-bottom: 0.5rem;">
                         <strong>Date:</strong><span id="view-order-date"></span>
